--- a/kubeconfig/tasks/controlplane.yml
+++ b/kubeconfig/tasks/controlplane.yml
@@ -8,6 +8,7 @@
     group: root
   vars:
     kube_apiserver_address: localhost
+    kube_apiserver_port: 6443
     client_cert_path: /etc/kubernetes/pki/{{ item }}.crt
     client_key_path: /etc/kubernetes/pki/{{ item }}.key
   loop:
