--- a/kubeconfig/tasks/kubelet.yml
+++ b/kubeconfig/tasks/kubelet.yml
@@ -8,5 +8,6 @@
     group: root
   vars:
     kube_apiserver_address: localhost
+    kube_apiserver_port: 6443
     client_cert_path: /etc/kubernetes/pki/kubelet.crt
     client_key_path: /etc/kubernetes/pki/kubelet.key
