--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
+inventory=.vagrant/provisioners/ansible/inventory/
 become=false
 log_path=/tmp/ansible.log
 gather_facts=false
@@ -6,7 +7,7 @@ host_key_checking=false
 
 gathering = smart
 fact_caching = jsonfile
-fact_caching_connection = /tmp/facts.json
+fact_caching_connection = /tmp/ansible_facts
 fact_caching_timeout = 86400
 
 [inventory]
