--- a/cilium/tasks/main.yml
+++ b/cilium/tasks/main.yml
@@ -1,16 +1,17 @@
-- name: Install helm
+- name: Download helm
   ansible.builtin.get_url:
     url: "{{ helm_download_url }}"
     checksum: "sha256:{{ helm_checksum }}"
-    dest: /tmp/helm-linux-amd64.tar.gz
+    dest: "{{ downloads_dir }}/helm-linux-amd64.tar.gz"
     owner: root
     group: root
     mode: "0444"
   tags:
     - download
+  register: helm_download
 - name: Extract helm
   ansible.builtin.unarchive:
-    src: /tmp/helm-linux-amd64.tar.gz
+    src: "{{ helm_download.dest }}"
     dest: /usr/local/bin/
     remote_src: true
     extra_opts:
