--- a/etcd-gateway/tasks/configure.yml
+++ b/etcd-gateway/tasks/configure.yml
@@ -1,8 +1,8 @@
 - name: Create systemd service
   ansible.builtin.template:
     src: systemd.service.j2
-    dest: '/etc/systemd/system/etcd.service'
-    mode: '0644'
+    dest: "/etc/systemd/system/etcd.service"
+    mode: "0644"
     owner: root
     group: root
   notify: Reload etcd-gateway systemd
