--- a/haproxy/tasks/main.yml
+++ b/haproxy/tasks/main.yml
@@ -14,6 +14,32 @@
     state: present
     update_cache: true
     cache_valid_time: "{{ cache_valid_time }}"
+- name: Allow all the traffic from 192.168.56.0/24 to all the ports
+  ansible.builtin.ufw:
+    rule: allow
+    from: 192.168.56.0/24
+    to: any
+    port: any
+    proto: any
+  tags:
+    - firewall
+    - never
+- name: Enable the firewall
+  ansible.builtin.ufw:
+    state: enabled
+    logging: full
+  tags:
+    - firewall
+    - never
+- name: Fetch the CA to the HAProxy's cert dir
+  ansible.builtin.copy:
+    src: /vagrant/share/ca.crt
+    dest: /etc/ssl/certs/kubernetes-the-hard-way.pem
+    mode: "0444"
+    owner: root
+    group: root
+    remote_src: true
+  notify: Reload haproxy
 - name: Copy config file
   ansible.builtin.template:
     src: haproxy.cfg.j2
