--- a/kubeconfig/tasks/admin.yml
+++ b/kubeconfig/tasks/admin.yml
@@ -18,7 +18,8 @@
     dest: /vagrant/share/admin.yml
     mode: "0400"
   vars:
-    kube_apiserver_address: "{{ hostvars[inventory_hostname].host_ip }}"
+    kube_apiserver_address: "{{ load_balancer_ip }}"
+    kube_apiserver_port: "{{ load_balancer_port }}"
     ca_cert_path: ./ca.crt
     client_cert_path: ./admin.crt
     client_key_path: ./admin.key
