--- a/kubeconfig/tasks/kube-proxy.yml
+++ b/kubeconfig/tasks/kube-proxy.yml
@@ -7,5 +7,6 @@
     group: root
   vars:
     kube_apiserver_address: localhost
+    kube_apiserver_port: 6443
     client_cert_path: /etc/kubernetes/pki/kube-proxy.crt
     client_key_path: /etc/kubernetes/pki/kube-proxy.key
