--- a/kubeconfig/tasks/main.yml
+++ b/kubeconfig/tasks/main.yml
@@ -7,14 +7,14 @@
     owner: root
     group: root
 - name: Set up KubeConfig for control plane
-  ansible.builtin.include_tasks:
+  ansible.builtin.import_tasks:
     file: controlplane.yml
 - name: Set up KubeConfig for worker nodes
-  ansible.builtin.include_tasks:
+  ansible.builtin.import_tasks:
     file: kubelet.yml
 - name: Admin
-  ansible.builtin.include_tasks:
+  ansible.builtin.import_tasks:
     file: admin.yml
 - name: Kube proxy
-  ansible.builtin.include_tasks:
+  ansible.builtin.import_tasks:
     file: kube-proxy.yml
