--- a/etcd-gateway/tasks/install.yml
+++ b/etcd-gateway/tasks/install.yml
@@ -1,8 +1,8 @@
 ---
 - name: Download etcd release tarball
   ansible.builtin.get_url:
-    url: https://github.com/etcd-io/etcd/releases/download/{{ etcd_version }}/etcd-{{ etcd_version }}-linux-amd64.tar.gz
-    dest: "{{ downloads_dir }}"
+    url: "{{ etcd_download_url }}"
+    dest: "{{ downloads_dir }}/{{ etcd_download_url | basename }}"
     mode: "0644"
     owner: root
     group: root
