--- a/k8s/defaults/main.yml
+++ b/k8s/defaults/main.yml
@@ -3,5 +3,5 @@ k8s_version: "{{ lookup('url', 'https://dl.k8s.io/release/stable.txt').split('\n
 kubernetes_public_ip: "{{ host_ip }}"
 cluster_cidr: 10.200.0.0/16
 service_cluster_ip_range: 10.32.0.0/24
-bind_address: "{{ host_ip }}"
+bind_address: "0.0.0.0"
 external_hostname: 192.168.56.100
