--- a/tls/tasks/apiserver.yml
+++ b/tls/tasks/apiserver.yml
@@ -19,7 +19,7 @@
     path: /etc/kubernetes/pki/kube-apiserver.csr
     privatekey_path: /etc/kubernetes/pki/kube-apiserver.key
     subject:
-      O: system:masters
+      O: system:kubernetes
       OU: Kubernetes The Hard Way
     subject_alt_name: "{{ lookup('template', 'apiserver-alt-names.yml.j2') | from_yaml }}"
 - name: Create API Server TLS certificate using CA key and cert
