--- a/encryption/tasks/main.yml
+++ b/encryption/tasks/main.yml
@@ -6,7 +6,7 @@
   failed_when: false
 - name: Generate random string
   ansible.builtin.set_fact:
-    key_secret: "{{ lookup('password', '/dev/null length=32 chars=ascii_letters,digits,special_characters') }}"
+    key_secret: "{{ lookup('ansible.builtin.password', '/dev/null length=32 chars=ascii_letters,digits,special_characters') }}"
   no_log: true
   when: key_secret is not defined
 - name: Ensure key_secret is populated
