fix: rename missing systemd ansible role
fixes #5

--- a/etcd-gateway/tasks/configure.yml
+++ b/etcd-gateway/tasks/configure.yml
@@ -7,7 +7,7 @@
     group: root
   notify: Reload etcd-gateway systemd
 - name: Start etcd service
-  ansible.builtin.systemd_service:
+  ansible.builtin.systemd:
     name: etcd.service
     state: started
     enabled: true
