--- a/etcd/tasks/configure.yml
+++ b/etcd/tasks/configure.yml
@@ -25,7 +25,7 @@
     - systemd
   notify: Reload etcd systemd
 - name: Start etcd service
-  ansible.builtin.systemd_service:
+  ansible.builtin.systemd:
     name: etcd.service
     state: started
     enabled: true
